# raspitalk

./: .gitignore  .pre-commit-config.yaml  README.md  build_installer.sh  install.sh  main.py  pyproject.toml  uninstall.sh
.github/workflows/: build.yml  checks.yml
deployment/: build_installer.sh  install.sh  laboite.service  start_stt.sh  uninstall.sh
hardware/display/lib/: lcdconfig.py
launchers/: laboite.service  start_tts.sh
src/: box_controller.py  display_controller.py  input_controller.py  lunii_controller.py  mic_controller.py  ollama_controller.py  playback_controller.py  recordings_controller.py  states.py  voice_controller.py
tools/: display_tool.py  input_tool.py  sound_tool.py  stt_tool.py  tts_tool.py
